patron mobile logo fix

--- a/css/main2.css
+++ b/css/main2.css
@@ -1586,7 +1586,7 @@ video.desktop {
     }
     
     #portfolio.work.patron {
-        background-size: 16em;
+        background-size: 13em;
     }
 }
 
